Now with photo goodness

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="site.css" />
+        <title>Hello Friend</title>
+    </head>
 <body>
 
-<h1>Hello, friend</h1>
+<h1>Hello from Stephanie Schwinn.</h1> 
+<br>
+<p>I keep this domain reserved because hey, who WOULDN'T want to own their own domain, but I haven't done anything interesting with it yet. So here's a picture of me dressed as a dinosaur-riding cowgirl last Halloween instead.</p>
 
+<img src="cowboy.jpg" alt="A majestic picture of a cowgirl riding a dinosaur, standing by a man wearing a horse head mask."/>
 
 </body>
 </html>
